--- a/myUnitGame.CSharp.csproj
+++ b/myUnitGame.CSharp.csproj
@@ -12,7 +12,7 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
@@ -76,10 +76,12 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Bullets\BulletBehavior.cs" />
     <Compile Include="Assets\Scripts\Depth.cs" />
+    <Compile Include="Assets\Scripts\GUI\DamagePopUp.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCAI.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCAnimation.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCAtt.cs" />
+    <Compile Include="Assets\Scripts\NPC\NPCAttackParticleEffect.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCCharacter.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCDaemon.cs" />
     <Compile Include="Assets\Scripts\NPC\NPCHealth.cs" />
@@ -93,6 +95,7 @@
     <Compile Include="Assets\Scripts\PlayerHealthEvent.cs" />
     <Compile Include="Assets\Scripts\PlayerMoveEvent.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\StartMenu\StartMenu.cs" />
     <Compile Include="Assets\Scripts\event system\GameEvent.cs" />
     <Compile Include="Assets\Scripts\event system\GameEventListener.cs" />
     <Compile Include="Assets\Scripts\event system\GameEventManager.cs" />
